--- a/notebooks/NYC_Taxi_EDA.ipynb
+++ b/notebooks/NYC_Taxi_EDA.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MAtnSqNQAPdh"
       },
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "ugIDizZP6AkW"
       },
@@ -50,21 +50,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 219
         },
         "id": "kLtj2l5xAH3Z",
-        "outputId": "67a45ba7-a41b-42b9-a482-abcbd9ca2d12"
+        "outputId": "4fe4db0f-8613-493b-d418-9615d92b0709"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pyspark.sql.session.SparkSession at 0x7a6a5a0a9300>"
+              "<pyspark.sql.session.SparkSession at 0x7d79a8110700>"
             ],
             "text/html": [
               "\n",
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "FrTe2-2XpZlJ"
       },
@@ -122,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3okKAyw0C9B1",
-        "outputId": "3ee8fa95-d03e-4f91-b2fa-9c1949d4de61"
+        "outputId": "308a98a6-80c8-4e85-bf42-4aa40e4cf2e1"
       },
       "outputs": [
         {
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "waiNqK-K8woa"
       },
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "6zz4tezxNn4O"
       },
@@ -180,13 +180,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hO_1syW3C_5g",
-        "outputId": "4dafaeb2-b271-418b-cffb-9ea12e59cd6b"
+        "outputId": "7f78c10e-57ac-41c5-a365-9a981dda7da5"
       },
       "outputs": [
         {
@@ -204,20 +204,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yZocIaO4D3cQ",
-        "outputId": "bda74d35-fc3c-41b8-9eb0-1302ca013247"
+        "outputId": "61afa73c-3793-4b49-ef17-4035dc4c5b8a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Time taken to load the data: 202.20083808898926 seconds\n"
+            "Time taken to load the data: 203.45871663093567 seconds\n"
           ]
         }
       ],
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "xeMkR9jQs5Ep"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oZLdUY0ptKXL",
-        "outputId": "a48f8579-050e-4d23-bd43-19636a11fcb0"
+        "outputId": "baeaf969-b4fd-4ff2-80e5-0c8c70c30bcd"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,13 +280,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Pg7amvTEKrw",
-        "outputId": "75ac5f8f-65c0-4bba-b039-6a49b89a0bfd"
+        "outputId": "d2cf8726-c1b6-4e5e-882d-b671407756ca"
       },
       "outputs": [
         {
@@ -313,13 +313,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dpu0_dGREyGN",
-        "outputId": "a8d920bc-6965-4efe-e9ff-473485d9741d"
+        "outputId": "aca8368f-67e3-48c0-ad75-03106d169409"
       },
       "outputs": [
         {
@@ -338,13 +338,25 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# repartitioning the dataframe\n",
+        "df_new = df_new.repartition(10)"
+      ],
+      "metadata": {
+        "id": "wfPr8jDcy3HX"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFrH42x8FqvM",
-        "outputId": "a2b3eb5d-b2ff-4cef-bbb7-d34a9b633185"
+        "outputId": "999087a7-86ff-4e76-ec48-6fb2470a1d8b"
       },
       "outputs": [
         {
@@ -363,13 +375,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjeDPYuBGvrh",
-        "outputId": "4be0753c-c92e-4e8b-9277-a94b582d6a07"
+        "outputId": "dbbdbba6-6f91-457e-9f15-97cceb72fe7d"
       },
       "outputs": [
         {
@@ -416,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "fl0Un7JqSQmj"
       },
@@ -428,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "Ajrvp5guGfPl"
       },
@@ -440,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "SvBAxuQ8GfZz"
       },
@@ -459,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "tF3Xt0FHtCfA"
       },
@@ -477,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "uiTDIgmotJzl"
       },
@@ -489,13 +501,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_U4HCi8uGfk0",
-        "outputId": "3a85d360-3ee3-41df-84c8-32ce1d1deaa6"
+        "outputId": "28a73829-44c0-4cd2-e062-e133522825b5"
       },
       "outputs": [
         {
@@ -533,13 +545,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_2MohoNjjjC4",
-        "outputId": "3a54419d-e8c8-46e7-a3c4-c01e690569d6"
+        "outputId": "15497078-1020-4d16-bbfe-33a1bb9b84b8"
       },
       "outputs": [
         {
@@ -580,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "2hLVPC6aiu2V"
       },
@@ -592,13 +604,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "yAu1OILmnUHa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d34a788-5f21-4956-db39-c7180e3f5c2e"
+        "outputId": "733fe0de-5ca7-469f-c363-777f054bdf49"
       },
       "outputs": [
         {
@@ -634,13 +646,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "oGK92oSlovsa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "73182d07-06b2-436f-e0b1-5dcd1fa98dc2"
+        "outputId": "75797b7c-a47b-4523-8f5b-d4ce68beaef8"
       },
       "outputs": [
         {
@@ -692,13 +704,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "mkBCPR7zqlj8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1db8babf-fe63-43c4-f0f6-e58e0e1f5158"
+        "outputId": "9dcfbd54-31a8-44e6-b5de-b8c2cd750900"
       },
       "outputs": [
         {
@@ -736,13 +748,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "Qk8fKUb6rfgK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b7934fc5-a426-400e-cee7-ba74b8772b92"
+        "outputId": "390fc73f-f9c8-49e3-adc1-cf8c1f84089e"
       },
       "outputs": [
         {
@@ -810,9 +822,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "693f1a98-91fc-48e5-b1ff-e6560d893c96"
+        "outputId": "d71b8fa3-f9c1-45c5-9932-25392f42b7b4"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,7 +863,7 @@
       "metadata": {
         "id": "TKgOIQa9CBYr"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -865,7 +877,7 @@
       "metadata": {
         "id": "iZWPb-Zm4r5G"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -878,7 +890,7 @@
       "metadata": {
         "id": "Q2NGgjZ05A8b"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -901,9 +913,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3j52Pxa1Cts",
-        "outputId": "0234f700-4272-444f-c7ab-d5a74b4d8a13"
+        "outputId": "0aa5fe73-a1b3-49ae-bc8b-546a5b0b569b"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,12 +945,12 @@
       "cell_type": "code",
       "source": [
         "# split the data into training and testing sets (70% training, 30% testing)\n",
-        "train_data, test_data = final_data.randomSplit([0.7, 0.3], seed=42)"
+        "train_data, test_data = df_1.randomSplit([0.7, 0.3], seed=42)"
       ],
       "metadata": {
         "id": "25T3IZSb497e"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -951,28 +963,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C4lljIzh0eAn",
-        "outputId": "558834c5-d325-407d-cb6e-b543adcc3833"
+        "outputId": "5dbdb439-8814-40b2-875c-32dc1184f83c"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------------+-----------+\n",
-            "|            features|fare_amount|\n",
-            "+--------------------+-----------+\n",
-            "|(9,[4,5,6,7],[1.0...|        6.6|\n",
-            "|(9,[4,5,6,7],[1.0...|        6.5|\n",
-            "|(9,[4,5,6,7],[1.0...|       15.0|\n",
-            "|(9,[4,5,6,7],[1.0...|        8.6|\n",
-            "|(9,[4,5,6,7],[1.0...|        7.3|\n",
-            "|(9,[4,5,6,7],[1.0...|        4.1|\n",
-            "|(9,[4,5,6,7],[1.0...|       16.1|\n",
-            "|(9,[4,5,6,7],[1.0...|        9.5|\n",
-            "|(9,[4,5,6,7],[1.0...|        4.9|\n",
-            "|(9,[4,5,6,7],[1.0...|        9.0|\n",
-            "+--------------------+-----------+\n",
+            "+-----------+------------------+------------------+------------------+------------------+---------------+----+-----+---+-----------+-----------+\n",
+            "|fare_amount|  pickup_longitude|   pickup_latitude| dropoff_longitude|  dropoff_latitude|passenger_count|year|month|day|day_of_week|hour_of_day|\n",
+            "+-----------+------------------+------------------+------------------+------------------+---------------+----+-----+---+-----------+-----------+\n",
+            "|        0.0|-74.07792663574219| 40.80571365356445|-74.07791900634766|40.805721282958984|              1|2015|    5| 15|          5|         21|\n",
+            "|        0.0|        -73.987115|         40.738808|        -74.005911|          40.71396|              1|2010|    2| 15|          1|         14|\n",
+            "|        0.0|         -73.48448|         40.813401|        -73.484442|         40.813323|              2|2014|    6| 29|          7|         16|\n",
+            "|        0.0|               0.0|               0.0|               0.0|               0.0|              2|2013|    8| 21|          3|         21|\n",
+            "|       0.01|-73.98033142089844| 40.77053451538086| -73.9819107055664| 40.77150344848633|              1|2015|    2| 19|          4|          6|\n",
+            "|       0.01|-73.89054870605469|40.719757080078125|-73.84229278564453| 40.66880416870117|              2|2015|    2| 27|          5|         15|\n",
+            "|        2.5|        -74.031369|         40.748268|        -74.031394|         40.748187|              1|2012|    8| 30|          4|         21|\n",
+            "|        2.5|        -74.030525|         40.748424|        -74.030494|         40.748417|              1|2012|   12| 17|          1|         22|\n",
+            "|        2.5|        -74.030283|         40.625031|        -74.030282|         40.625035|              1|2012|    1|  4|          3|         16|\n",
+            "|        2.5|        -74.015593|         40.704307|        -74.016735|         40.704437|              5|2012|    6| 12|          2|          8|\n",
+            "+-----------+------------------+------------------+------------------+------------------+---------------+----+-----+---+-----------+-----------+\n",
             "only showing top 10 rows\n",
             "\n"
           ]
@@ -997,7 +1009,7 @@
       "metadata": {
         "id": "WtK8pcAp5ZE-"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1012,7 +1024,7 @@
       "metadata": {
         "id": "Nt61ZsAf62EA"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1030,19 +1042,30 @@
       "metadata": {
         "id": "bGHBRKpC692m"
       },
-      "execution_count": null,
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipeline=Pipeline(stages=[assembler,lrcv])"
+      ],
+      "metadata": {
+        "id": "8Lw0ZI56mPnB"
+      },
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# fit the model\n",
-        "cv_model = lrcv.fit(train_data)"
+        "pipeline_model = pipeline.fit(train_data)"
       ],
       "metadata": {
         "id": "TKdBwKbI5iqs"
       },
-      "execution_count": 38,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1058,31 +1081,66 @@
       "cell_type": "code",
       "source": [
         "# get predictions from the best model\n",
-        "predictions = cv_model.transform(test_data)\n",
+        "predictions = pipeline_model.transform(test_data)\n",
         "\n",
         "# evaluate the best model using RMSE\n",
         "rmse = lrevaluator.evaluate(predictions)\n",
-        "print(f\"Best Model's RMSE on test data: {rmse}\")\n",
-        "\n",
-        "# # retrieve the best model's parameters\n",
-        "# best_model = cv_model.bestModel.stages[-1]\n",
-        "# print(\"Best Model's regParam:\", best_model._java_obj.getRegParam())\n",
-        "# print(\"Best Model's elasticNetParam:\", best_model._java_obj.getElasticNetParam())"
+        "print(f\"Best Model's RMSE on test data: {rmse}\")"
       ],
       "metadata": {
         "id": "0h9mMqF_5oO9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43bcc340-c9dc-42b9-a1ad-72140beb9b23"
+        "outputId": "86185d72-9596-4ff0-b78f-e29d8291f74f"
       },
-      "execution_count": 40,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best Model's RMSE on test data: 4.138002179017846\n"
+            "Best Model's RMSE on test data: 4.125455532370255\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model = pipeline_model.stages[-1].bestModel\n",
+        "best_param=best_model.extractParamMap()\n",
+        "\n",
+        "for param, value in best_param.items():\n",
+        "    print(f\"{param.name}: {value}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lG-29t8nwROf",
+        "outputId": "f96d5d59-adf7-4f22-c960-010428d13df0"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "aggregationDepth: 2\n",
+            "elasticNetParam: 0.0\n",
+            "epsilon: 1.35\n",
+            "featuresCol: features\n",
+            "fitIntercept: True\n",
+            "labelCol: fare_amount\n",
+            "loss: squaredError\n",
+            "maxBlockSizeInMB: 0.0\n",
+            "maxIter: 100\n",
+            "predictionCol: prediction\n",
+            "regParam: 0.1\n",
+            "solver: auto\n",
+            "standardization: True\n",
+            "tol: 1e-06\n"
           ]
         }
       ]
@@ -1095,6 +1153,17 @@
       "source": [
         "# Saving the model"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipeline_model.save('/content/drive/MyDrive/NYC_taxi_data/lr_model')"
+      ],
+      "metadata": {
+        "id": "NtC_Aes3ymqv"
+      },
+      "execution_count": 65,
+      "outputs": []
     }
   ],
   "metadata": {
